// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieContent renders correctly 1`] = `
<Wrapper>
  <Row>
    <IconButton
      icon={[Function]}
      onClick={[Function]}
    />
  </Row>
  <Row>
    <MetaText>
      99 min
       · 
      2000
       ·
    </MetaText>
    <TextLabel>
      R
    </TextLabel>
  </Row>
  <Row>
    <Title>
      Another Movie Title
    </Title>
  </Row>
  <Row>
    <IconLabel
      color="#ff9f1c"
      icon={[Function]}
    >
      8.3
      /10
    </IconLabel>
    <Button
      active={false}
      icon={[Function]}
      onClick={[Function]}
    >
      Add to favourites
    </Button>
  </Row>
  <Row
    direction="column"
  >
    <Heading>
      Plot
    </Heading>
    <Paragraph>
      <Text>
        Lorem ipsum dolor sit amet
      </Text>
    </Paragraph>
  </Row>
  <Subgrid>
    <div>
      <Heading>
        Cast
      </Heading>
      <Text>
        <div
          key="aaaa"
        >
          aaaa
        </div>
        <div
          key="bbbbbb"
        >
          bbbbbb
        </div>
      </Text>
    </div>
    <div>
      <Heading>
        Genre
      </Heading>
      <Text>
        <div
          key="xxx"
        >
          xxx
        </div>
        <div
          key="vvvvvv"
        >
          vvvvvv
        </div>
      </Text>
    </div>
    <div>
      <Heading>
        Director
      </Heading>
      <Text>
        <div
          key="ccccccc"
        >
          ccccccc
        </div>
        <div
          key="ooo"
        >
          ooo
        </div>
      </Text>
    </div>
  </Subgrid>
  <PosterWrapper />
</Wrapper>
`;

exports[`MovieContent renders favorite correctly 1`] = `
<Wrapper>
  <Row>
    <IconButton
      icon={[Function]}
      onClick={[Function]}
    />
  </Row>
  <Row>
    <MetaText>
      99 min
       · 
      2000
       ·
    </MetaText>
    <TextLabel>
      R
    </TextLabel>
  </Row>
  <Row>
    <Title>
      Another Movie Title
    </Title>
  </Row>
  <Row>
    <IconLabel
      color="#ff9f1c"
      icon={[Function]}
    >
      8.3
      /10
    </IconLabel>
    <Button
      active={true}
      icon={[Function]}
      onClick={[Function]}
    >
      Added
    </Button>
  </Row>
  <Row
    direction="column"
  >
    <Heading>
      Plot
    </Heading>
    <Paragraph>
      <Text>
        Lorem ipsum dolor sit amet
      </Text>
    </Paragraph>
  </Row>
  <Subgrid>
    <div>
      <Heading>
        Cast
      </Heading>
      <Text>
        <div
          key="aaaa"
        >
          aaaa
        </div>
        <div
          key="bbbbbb"
        >
          bbbbbb
        </div>
      </Text>
    </div>
    <div>
      <Heading>
        Genre
      </Heading>
      <Text>
        <div
          key="xxx"
        >
          xxx
        </div>
        <div
          key="vvvvvv"
        >
          vvvvvv
        </div>
      </Text>
    </div>
    <div>
      <Heading>
        Director
      </Heading>
      <Text>
        <div
          key="ccccccc"
        >
          ccccccc
        </div>
        <div
          key="ooo"
        >
          ooo
        </div>
      </Text>
    </div>
  </Subgrid>
  <PosterWrapper />
</Wrapper>
`;

exports[`MovieContent renders poster correctly 1`] = `
<Wrapper>
  <Row>
    <IconButton
      icon={[Function]}
      onClick={[Function]}
    />
  </Row>
  <Row>
    <MetaText>
      99 min
       · 
      2000
       ·
    </MetaText>
    <TextLabel>
      R
    </TextLabel>
  </Row>
  <Row>
    <Title>
      Another Movie Title
    </Title>
  </Row>
  <Row>
    <IconLabel
      color="#ff9f1c"
      icon={[Function]}
    >
      8.3
      /10
    </IconLabel>
    <Button
      active={false}
      icon={[Function]}
      onClick={[Function]}
    >
      Add to favourites
    </Button>
  </Row>
  <Row
    direction="column"
  >
    <Heading>
      Plot
    </Heading>
    <Paragraph>
      <Text>
        Lorem ipsum dolor sit amet
      </Text>
    </Paragraph>
  </Row>
  <Subgrid>
    <div>
      <Heading>
        Cast
      </Heading>
      <Text>
        <div
          key="aaaa"
        >
          aaaa
        </div>
        <div
          key="bbbbbb"
        >
          bbbbbb
        </div>
      </Text>
    </div>
    <div>
      <Heading>
        Genre
      </Heading>
      <Text>
        <div
          key="xxx"
        >
          xxx
        </div>
        <div
          key="vvvvvv"
        >
          vvvvvv
        </div>
      </Text>
    </div>
    <div>
      <Heading>
        Director
      </Heading>
      <Text>
        <div
          key="ccccccc"
        >
          ccccccc
        </div>
        <div
          key="ooo"
        >
          ooo
        </div>
      </Text>
    </div>
  </Subgrid>
  <PosterWrapper>
    <Poster
      src="url.jpg"
    />
  </PosterWrapper>
</Wrapper>
`;

exports[`MovieContent renders rottenRating correctly 1`] = `
<Wrapper>
  <Row>
    <IconButton
      icon={[Function]}
      onClick={[Function]}
    />
  </Row>
  <Row>
    <MetaText>
      99 min
       · 
      2000
       ·
    </MetaText>
    <TextLabel>
      R
    </TextLabel>
  </Row>
  <Row>
    <Title>
      Another Movie Title
    </Title>
  </Row>
  <Row>
    <IconLabel
      color="#ff9f1c"
      icon={[Function]}
    >
      8.3
      /10
    </IconLabel>
    <IconLabel
      color="#ff4040"
      icon={[Function]}
    >
      77%
    </IconLabel>
    <Button
      active={false}
      icon={[Function]}
      onClick={[Function]}
    >
      Add to favourites
    </Button>
  </Row>
  <Row
    direction="column"
  >
    <Heading>
      Plot
    </Heading>
    <Paragraph>
      <Text>
        Lorem ipsum dolor sit amet
      </Text>
    </Paragraph>
  </Row>
  <Subgrid>
    <div>
      <Heading>
        Cast
      </Heading>
      <Text>
        <div
          key="aaaa"
        >
          aaaa
        </div>
        <div
          key="bbbbbb"
        >
          bbbbbb
        </div>
      </Text>
    </div>
    <div>
      <Heading>
        Genre
      </Heading>
      <Text>
        <div
          key="xxx"
        >
          xxx
        </div>
        <div
          key="vvvvvv"
        >
          vvvvvv
        </div>
      </Text>
    </div>
    <div>
      <Heading>
        Director
      </Heading>
      <Text>
        <div
          key="ccccccc"
        >
          ccccccc
        </div>
        <div
          key="ooo"
        >
          ooo
        </div>
      </Text>
    </div>
  </Subgrid>
  <PosterWrapper />
</Wrapper>
`;
